Fix horizontal overflow on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,9 @@
  }
  body {
  }
+ .site-wrapper{
+   overflow-x: hidden;
+ }
  .container {
    max-width: 955px;
  }
